# Polygon

./: Algorithm.txt  CMakeLists.txt  Dropbox - Ярлык.lnk  Raschet_bezopasnoy_zony_razvorota_robota.docx  communication.cpp  communication.h  communication_b.cpp  computationMovement.cpp  computationMovement.h  computationMovement_b.cpp  computationMovement_b.h  findObstacles.cpp  main.cpp  main_b.cpp  obstacle.h  obstacles.h  pid  points.msg  poly_ros_node.cpp  power.cpp  power.h  power_b.cpp  power_b.h  result.cpp  robotModel.cpp  robotModel.h  robotModel_parametrs.h  robotModel_parametrs.msg  rpnodesub.cpp  ~$schet_bezopasnoy_zony_razvorota_robota.docx
